cleanup pattern matching variable names: `_` now is supported at newer jdk level
GitOrigin-RevId: 458f55a56f75051f7cf05aedb161c7e2c907c053